k8s/app/publisher/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: publisher-ingress
spec:
  rules:
    - host: publisher.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: publisher
                port:
                  number: 8080
    - host: publisher.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
